hack/dataplaneConverter/clusterIptableSave
# Generated by iptables-save v1.8.4 on Fri Jul  9 21:16:34 2021
*filter
:INPUT ACCEPT [35346:14157634]
:FORWARD ACCEPT [136:7088]
:OUTPUT ACCEPT [33915:8374271]
:AZURE-NPM - [0:0]
:AZURE-NPM-ACCEPT - [0:0]
:AZURE-NPM-EGRESS - [0:0]
:AZURE-NPM-EGRESS-DROPS - [0:0]
:AZURE-NPM-EGRESS-PORT - [0:0]
:AZURE-NPM-EGRESS-TO - [0:0]
:AZURE-NPM-INGRESS - [0:0]
:AZURE-NPM-INGRESS-DROPS - [0:0]
:AZURE-NPM-INGRESS-FROM - [0:0]
:AZURE-NPM-INGRESS-PORT - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -j AZURE-NPM
-A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 80 -j DROP
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A AZURE-NPM -j AZURE-NPM-INGRESS
-A AZURE-NPM -j AZURE-NPM-EGRESS
-A AZURE-NPM -m mark --mark 0x3000 -m comment --comment ACCEPT-on-INGRESS-and-EGRESS-mark-0x3000 -j AZURE-NPM-ACCEPT
-A AZURE-NPM -m mark --mark 0x2000 -m comment --comment ACCEPT-on-INGRESS-mark-0x2000 -j AZURE-NPM-ACCEPT
-A AZURE-NPM -m mark --mark 0x1000 -m comment --comment ACCEPT-on-EGRESS-mark-0x1000 -j AZURE-NPM-ACCEPT
-A AZURE-NPM -m state --state RELATED,ESTABLISHED -m comment --comment ACCEPT-on-connection-state -j ACCEPT
-A AZURE-NPM-ACCEPT -m comment --comment Clear-AZURE-NPM-MARKS -j MARK --set-xmark 0x0/0xffffffff
-A AZURE-NPM-ACCEPT -m comment --comment ACCEPT-All-packets -j ACCEPT
-A AZURE-NPM-EGRESS -j AZURE-NPM-EGRESS-PORT
-A AZURE-NPM-EGRESS -m mark --mark 0x3000 -m comment --comment RETURN-on-EGRESS-and-INGRESS-mark-0x3000 -j RETURN
-A AZURE-NPM-EGRESS -m mark --mark 0x1000 -m comment --comment RETURN-on-EGRESS-mark-0x1000 -j RETURN
-A AZURE-NPM-EGRESS -j AZURE-NPM-EGRESS-DROPS
-A AZURE-NPM-EGRESS-DROPS -m mark --mark 0x3000 -m comment --comment RETURN-on-EGRESS-and-INGRESS-mark-0x3000 -j RETURN
-A AZURE-NPM-EGRESS-DROPS -m mark --mark 0x1000 -m comment --comment RETURN-on-EGRESS-mark-0x1000 -j RETURN
-A AZURE-NPM-EGRESS-DROPS -m set --match-set azure-npm-2173871756 src -m set --match-set azure-npm-837532042 src -m comment --comment "DROP-ALL-FROM-app:frontend-IN-ns-testnamespace" -j DROP
-A AZURE-NPM-EGRESS-DROPS -m set --match-set azure-npm-784554818 src -m set --match-set azure-npm-1547420863 src -m comment --comment "DROP-ALL-FROM-role:db-IN-ns-default" -j DROP
-A AZURE-NPM-EGRESS-DROPS -m set --match-set azure-npm-3909944339 src -m comment --comment DROP-ALL-FROM-ns-unsafe -j DROP
-A AZURE-NPM-EGRESS-PORT -m set --match-set azure-npm-2064349730 src -m set --match-set azure-npm-826519261 src -m comment --comment "ALLOW-ALL-FROM-app:konnectivity-agent-IN-ns-kube-system" -j MARK --set-xmark 0x1000/0x1000
-A AZURE-NPM-EGRESS-PORT -p tcp -m tcp --dport 5978 -m set --match-set azure-npm-784554818 src -m set --match-set azure-npm-1547420863 src -m set --match-set azure-npm-3675320636 dst -m comment --comment "ALLOW-k8s-example-policy-in-ns-default-0out-AND-TCP-PORT-5978-FROM-role:db-IN-ns-default" -j MARK --set-xmark 0x1000/0x1000
-A AZURE-NPM-EGRESS-PORT -p udp -m udp --dport 53 -m set --match-set azure-npm-2173871756 src -m set --match-set azure-npm-837532042 src -m comment --comment "ALLOW-ALL-TO-UDP-PORT-53-FROM-app:frontend-IN-ns-testnamespace" -j MARK --set-xmark 0x1000/0x1000
-A AZURE-NPM-EGRESS-PORT -p tcp -m tcp --dport 53 -m set --match-set azure-npm-2173871756 src -m set --match-set azure-npm-837532042 src -m comment --comment "ALLOW-ALL-TO-TCP-PORT-53-FROM-app:frontend-IN-ns-testnamespace" -j MARK --set-xmark 0x1000/0x1000
-A AZURE-NPM-EGRESS-PORT -m mark --mark 0x3000 -m comment --comment RETURN-on-EGRESS-and-INGRESS-mark-0x3000 -j RETURN
-A AZURE-NPM-EGRESS-PORT -m mark --mark 0x1000 -m comment --comment RETURN-on-EGRESS-mark-0x1000 -j RETURN
-A AZURE-NPM-EGRESS-PORT -m comment --comment ALL-JUMP-TO-AZURE-NPM-EGRESS-TO -j AZURE-NPM-EGRESS-TO
-A AZURE-NPM-EGRESS-TO -m set --match-set azure-npm-2173871756 src -m set --match-set azure-npm-837532042 src -m set --match-set azure-npm-530439631 dst -m comment --comment "ALLOW-app:frontend-IN-ns-testnamespace-TO-all-namespaces" -j MARK --set-xmark 0x1000/0x1000
-A AZURE-NPM-INGRESS -j AZURE-NPM-INGRESS-PORT
-A AZURE-NPM-INGRESS -m mark --mark 0x2000 -m comment --comment RETURN-on-INGRESS-mark-0x2000 -j RETURN
-A AZURE-NPM-INGRESS -j AZURE-NPM-INGRESS-DROPS
-A AZURE-NPM-INGRESS-DROPS -m mark --mark 0x2000 -m comment --comment RETURN-on-INGRESS-mark-0x2000 -j RETURN
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m set ! --match-set azure-npm-2537389870 dst -m set --match-set azure-npm-456904991 dst -m set --match-set azure-npm-440127372 dst -m comment --comment "DROP-ALL-TO-app:frontend-AND-!k0-AND-k1:v0-AND-k1:v1-IN-ns-testnamespace" -j DROP
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m comment --comment "DROP-ALL-TO-app:frontend-IN-ns-testnamespace" -j DROP
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-3863441321 dst -m set --match-set azure-npm-1519775445 dst -m comment --comment "DROP-ALL-TO-app:server-IN-ns-test" -j DROP
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-2608925630 dst -m set --match-set azure-npm-2107662311 dst -m set --match-set azure-npm-1797209395 dst -m comment --comment "DROP-ALL-TO-app:webapp-AND-role:backend-IN-ns-development" -j DROP
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-784554818 dst -m set --match-set azure-npm-1547420863 dst -m comment --comment "DROP-ALL-TO-role:db-IN-ns-default" -j DROP
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-42068709 dst -m set --match-set azure-npm-3926344238 dst -m set --match-set azure-npm-3019307935 dst -m comment --comment "DROP-ALL-TO-app:k8s-AND-team:aks-IN-ns-acn" -j DROP
-A AZURE-NPM-INGRESS-DROPS -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m comment --comment "DROP-ALL-TO-app:frontend-IN-ns-testnamespace" -j DROP
-A AZURE-NPM-INGRESS-FROM -m set --match-set azure-npm-2343777025 src -m set ! --match-set azure-npm-1217484542 src -m set ! --match-set azure-npm-1234262161 src -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m comment --comment "ALLOW-ns-namespace:dev-AND-ns-!namespace:test0-AND-ns-!namespace:test1-TO-app:frontend-IN-ns-testnamespace" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-FROM -m set --match-set azure-npm-42068709 src -m set --match-set azure-npm-3315585516 src -m set --match-set azure-npm-3955682017 src -m set --match-set azure-npm-42068709 dst -m set --match-set azure-npm-3926344238 dst -m set --match-set azure-npm-3019307935 dst -m comment --comment "ALLOW-binary:cns-AND-group:container-IN-ns-acn-TO-app:k8s-AND-team:aks-IN-ns-acn" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-FROM -m set --match-set azure-npm-42068709 src -m set --match-set azure-npm-3345321849 src -m set --match-set azure-npm-2802478816 src -m set --match-set azure-npm-42068709 dst -m set --match-set azure-npm-3926344238 dst -m set --match-set azure-npm-3019307935 dst -m comment --comment "ALLOW-program:cni-AND-team:acn-IN-ns-acn-TO-app:k8s-AND-team:aks-IN-ns-acn" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-FROM -m set --match-set azure-npm-530439631 src -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m set ! --match-set azure-npm-2537389870 dst -m set --match-set azure-npm-456904991 dst -m set --match-set azure-npm-440127372 dst -m comment --comment "ALLOW-all-namespaces-TO-app:frontend-AND-!k0-AND-k1:v0-AND-k1:v1-IN-ns-testnamespace" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -m set --match-set azure-npm-256277463 dst -m set --match-set azure-npm-2688166573 dst -m comment --comment "ALLOW-ALL-TO-app:backdoor-IN-ns-dangerous" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -p tcp -m set --match-set azure-npm-784554818 dst -m set --match-set azure-npm-1547420863 dst -m set --match-set azure-npm-784554818 src -m set --match-set azure-npm-2574419033 src -m tcp --dport 6379 -m comment --comment "ALLOW-role:frontend-IN-ns-default-AND-TCP-PORT-6379-TO-role:db-IN-ns-default" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -p tcp -m set --match-set azure-npm-784554818 dst -m set --match-set azure-npm-1547420863 dst -m set --match-set azure-npm-1883405147 src -m tcp --dport 6379 -m comment --comment "ALLOW-ns-project:myproject-AND-TCP-PORT-6379-TO-role:db-IN-ns-default" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -p tcp -m set --match-set azure-npm-784554818 dst -m set --match-set azure-npm-1547420863 dst -m set --match-set azure-npm-2329341111 src -m tcp --dport 6379 -m comment --comment "ALLOW-k8s-example-policy-in-ns-default-0in-AND-TCP-PORT-6379-TO-role:db-IN-ns-default" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -p tcp -m set --match-set azure-npm-926814778 src -m set --match-set azure-npm-2107662311 src -m set --match-set azure-npm-2574419033 src -m set --match-set azure-npm-2608925630 dst -m set --match-set azure-npm-2107662311 dst -m set --match-set azure-npm-1797209395 dst -m tcp --dport 80 -m comment --comment "ALLOW-ns-purpose:development-AND-app:webapp-AND-role:frontend-AND-TCP-PORT-80-TO-app:webapp-AND-role:backend-IN-ns-development" -j MARK --set-xmark 0x2000/0xfffffff [...]
-A AZURE-NPM-INGRESS-PORT -m set --match-set azure-npm-3863441321 dst -m set --match-set azure-npm-1519775445 dst -m set --match-set azure-npm-3050895063 dst,dst -m comment --comment "ALLOW-ALL-TCP-PORT-serve-80-TO-app:server-IN-ns-test" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -p tcp -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m set --match-set azure-npm-2173871756 src -m set --match-set azure-npm-3038731686 src -m comment --comment "ALLOW-app:backend-IN-ns-testnamespace-AND-TCP-TO-app:frontend-IN-ns-testnamespace" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -m set --match-set azure-npm-2173871756 dst -m set --match-set azure-npm-837532042 dst -m comment --comment "ALLOW-ALL-TO-app:frontend-IN-ns-testnamespace" -j MARK --set-xmark 0x2000/0xffffffff
-A AZURE-NPM-INGRESS-PORT -m mark --mark 0x2000 -m comment --comment RETURN-on-INGRESS-mark-0x2000 -j RETURN
-A AZURE-NPM-INGRESS-PORT -m comment --comment ALL-JUMP-TO-AZURE-NPM-INGRESS-FROM -j AZURE-NPM-INGRESS-FROM
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Jul  9 21:16:34 2021
